2005-05-10  Don Allingham  <don@gramps-project.org>
	* src/DbPrompter.py: add callback for progressbar
	* src/GrampsXMLDB.py: pass callback task
	* src/ReadXML.py: handle progress callback, fix placeobj error
	* src/gramps_main.py: define progress bar callback

2005-05-10  Eero Tamminen  <eerot@sf>
	* src/plugins/StatisticsChart.po: add gettext _() to three strings
	  where it was missing

2005-05-10  Don Allingham  <don@gramps-project.org>
	* src/StartupDialog.py: check for broken Slackware library, and
	missing gconf installation, present error messages instead of
	tracebacks

2005-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/data/gramps.schemas: Add a welcome key.
	* src/GrampsGconfKeys.py: Add get/set methods for welcome key.
	* src/GrampsIniKeys.py: Add get/set methods for welcome key.

	* src/po/ru.po: Update.

	* src/gramps.glade: Remove unused widget.
	* src/gramps_main.py: Use new welcome key for the welcome dialog.

	* src/data/tips.xml: Update tips.

	* src/WriteXML.py (write_witness): Proper witness reference.
	* src/ReadXML.py (start_witness): Initialize empty comment.

2005-05-10  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Updated translation
	* src/plugins/rel_es.py: Revert to more conservative relationships

2005-05-09  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: new scrollable message dialog 
	* src/gramps_main.py: add new upgrading information message
	* src/template.po: new translatable string
	* src/StartupDialog.py: Added Alex's configuration upgrade, but
	wrapped in gconf detection

2005-05-09  Alex Roitman  <shura@gramps-project.org>
	* doc/gramps-manual/C/authors.xml: Update.

	* src/DisplayModels.py (column_change): Use localized time string.
	* src/PeopleModel.py (column_change): Use localized time string.
	* src/RelLib.py (get_change_display): Use localized time string.

2005-05-09  Baruch Even  <baruch@ev-en.org>
	* src/plugins/GraphViz.py (parse_user_options): Use 'justyears'.
