@@ -4,11 +4,11 @@ dnl Process this file with autoconf to produce a configure script.
 dnl May need to run automake && aclocal first
 
 AC_PREREQ(2.57)
-AC_INIT(gramps, 1.1.99pre2, gramps-bugs@lists.sourceforge.net)
+AC_INIT(gramps, 2.0.0, gramps-bugs@lists.sourceforge.net)
 AC_CONFIG_SRCDIR(src/gramps.py)
 AM_INIT_AUTOMAKE(1.6.3)
-RELEASE=0.CVS$(head -c 10 ${srcdir}/ChangeLog | tr -d '-')
-dnl RELEASE=1
+dnl RELEASE=0.CVS$(head -c 10 ${srcdir}/ChangeLog | tr -d '-')
+RELEASE=1
 
 VERSIONSTRING=$VERSION
 if test x"$RELEASE" != "x"
