@@ -2,7 +2,8 @@
 	* src/DbPrompter.py: add callback for progressbar
 	* src/GrampsXMLDB.py: pass callback task
 	* src/ReadXML.py: handle progress callback, fix placeobj error
-	* src/gramps_main.py: define progress bar callback
+	* src/gramps_main.py: define progress bar callback, remove problem
+	filters
 
 2005-05-10  Eero Tamminen  <eerot@sf>
 	* src/plugins/StatisticsChart.po: add gettext _() to three strings
